--- a/src/pages/lights/lights.html
+++ b/src/pages/lights/lights.html
@@ -18,27 +18,27 @@
 
   <div *ngIf="errorMessage">{{errorMessage}}</div>
   <ion-list>
-      <ion-item><button ion-button full large icon-left (click)="toggleLight('outside')">
+      <ion-item><button ion-button full medium icon-left (click)="toggleLight('outside')">
         <ion-icon [name]="icons.outside"></ion-icon>
         Garage
       </button></ion-item>
-      <ion-item><button ion-button full large icon-left (click)="toggleLight('driveway')">
+      <ion-item><button ion-button full medium icon-left (click)="toggleLight('driveway')">
         <ion-icon [name]="icons.driveway"></ion-icon>
         Driveway
       </button></ion-item>
-      <ion-item><button ion-button full large icon-left (click)="toggleLight('lamp')">
+      <ion-item><button ion-button full medium icon-left (click)="toggleLight('lamp')">
         <ion-icon [name]="icons.lamp"></ion-icon>
         Lamp
       </button></ion-item>
-      <ion-item><button ion-button full large icon-left (click)="toggleLight('aquarium')">
+      <ion-item><button ion-button full medium icon-left (click)="toggleLight('aquarium')">
         <ion-icon [name]="icons.aquarium"></ion-icon>
         Aquarium
       </button></ion-item>
-      <ion-item><button ion-button full large icon-left (click)="toggleLight('coffee')">
+      <ion-item><button ion-button full medium icon-left (click)="toggleLight('coffee')">
         <ion-icon [name]="icons.coffee"></ion-icon>
         Coffee
       </button></ion-item>
-      <ion-item><button ion-button full large icon-left (click)="toggleLight('fan')">
+      <ion-item><button ion-button full medium icon-left (click)="toggleLight('fan')">
         <ion-icon [name]="icons.fan"></ion-icon>
         Fan
       </button></ion-item>
