--- a/src/pages/weather/weather.html
+++ b/src/pages/weather/weather.html
@@ -10,7 +10,7 @@
 </ion-header>
 
 <ion-content>
-  <div *ngIf="errorMessage">{{errorMessage}}</div>
+  <div *ngIf="errorMessage">{{''}}</div>
   <div padding>
     <ion-segment [(ngModel)]="selectedSegment">
       <ion-segment-button value="current">
