--- a/src/pages/garage/garage.html
+++ b/src/pages/garage/garage.html
@@ -40,6 +40,6 @@
   </ion-list>
   
   <ion-content text-center>
-      <img src="https://mozzarelly.com/snap?user=mozzarelly&pwd=4h1K4o7pPoZ2" />
+      <img src="https://mozzarelly.com/home/snap.png" />
   </ion-content>
 </ion-content>
